--- a/styles.css
+++ b/styles.css
@@ -87,3 +87,37 @@
 #tel a, #loc a, .fa-brands {
     color: white;
 }
+@media(max-width:650px){
+    .c-item{
+        height: 450px;
+        width: 100%;
+    }
+    .c-img{
+        height: 100%;
+    }
+    .grid{
+        display: flex;
+        height: 2000px;
+        width: 300px;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+}
+@media(min-width:651px){
+    .grid{
+        display: flex;
+        height: 1100px;
+        width: 700px;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+}
+@media(min-width:1050px){
+    .grid{
+        display: flex;
+        height: 700px;
+        width: 1100px;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+}
