--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@
     height: 100%;
     object-fit: cover;
     position: absolute;
-    transition: 0.4s ease-in-out;
+    transition: opacity 0.6s ease-in-out;
 }
 
 .img-front:hover{
