--- a/styles.css
+++ b/styles.css
@@ -39,10 +39,11 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    position: absolute;
     transition: opacity 0.6s ease-in-out;
 }
-
+.img-front{
+    position: absolute;
+}
 .img-front:hover{
     opacity: 0;
     cursor: pointer;
