--- a/styles.css
+++ b/styles.css
@@ -51,11 +51,13 @@
 .image-container {
     position: relative;
     height: 400px;
+    background-color: black;
 }
 .image-container img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    opacity: 60%;
 }
 .overlay-text {
     font-family: "Roboto";
