--- a/styles.css
+++ b/styles.css
@@ -185,6 +185,7 @@ footer{
 }
 .d-item{
     height: 300px;
+    width: 300px;
     border-top-right-radius: 10px; 
     border-top-left-radius: 10px; 
     box-shadow: 0 -1px 10px hsla(0, 0%, 0%, 0.3);
