--- a/styles.css
+++ b/styles.css
@@ -186,6 +186,7 @@ footer{
 .d-item{
     height: 300px;
     width: 300px;
+    object-fit: cover;
     border-top-right-radius: 10px; 
     border-top-left-radius: 10px; 
     box-shadow: 0 -1px 10px hsla(0, 0%, 0%, 0.3);
