--- a/styles.css
+++ b/styles.css
@@ -391,11 +391,7 @@ label {
     font-size: 14px;
 }
 
-input[type="text"],
-input[type="number"],
-textarea,
-input[type="file"],
-input[type="url"] {
+.add-salad-form input {
     width: 100%;
     padding: 10px;
     font-size: 16px;
